environments/git.rwx.dev/gitea-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitea-statefulset
spec:
  serviceName: "gitea-headless"
  replicas: 1
  template:
    spec:
      containers:
      - name: gitea
        # command: ["tail", "-f", "/dev/null"]
        volumeMounts:
        - name: gitea-data
          mountPath: /data
        - name: gitea-env
          mountPath: /mnt/vault-secrets-store
          readOnly: true
        
      volumes:
        - name: gitea-data
          persistentVolumeClaim:
            claimName: gitea-data
        - name: gitea-env
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: gitea-env
