environments/git.rwx.dev/gogs-db-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet 
metadata:
  name: gogs-db
spec:
  template:
    spec:
      containers:
        - name: gogs-db
          volumeMounts:
            - name: gogs-db
              mountPath: /var/lib/postgresql/data
              subPath: data
            - name: db-env
              mountPath: /mnt/vault-secrets-store
              readOnly: true
      volumes:
        - name: gogs-db
          persistentVolumeClaim:
            claimName: gogs-db-data
        - name: db-env
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: db-env
