environments/git.rwx.dev/gogs-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gogs-statefulset
spec:
  serviceName: "gogs-headless"
  replicas: 1
  template:
    spec:
      containers:
      - name: gogs
        volumeMounts:
        - name: gogs-data
          mountPath: /data
        
      volumes:
        - name: gogs-data
          persistentVolumeClaim:
            claimName: gogs-data
        - name: db-env
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: db-env
        - name: app-ini
          configMap:
            name: app-ini
