environments/git.rwx.dev/redis-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  template:
    spec:
      containers:
      - name: redis
        volumeMounts:
        - name: redis-strg
          mountPath: /data
        - name: db-env
          mountPath: /mnt/vault-secrets-store
          readOnly: true
      volumes:
      - name: redis-strg
        persistentVolumeClaim:
          claimName: redis-strg
      - name: db-env
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: db-env
