environments/git.rwx.dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gogs
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: "git.rwx.dev"
spec:
  ingressClassName: nginx
  rules:
    - host: git.rwx.dev
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: gogs
                port:
                  number: 3000
            path: /
  tls:
    - hosts:
      - git.rwx.dev
      secretName: tls-cert
